# django-poetry-heroku

./: .env.example  .gitignore  LICENSE  README.md  SETTINGS.md  __init__.py  manage.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  lint.yml
config/: urls.py  wsgi.py
config/settings/: base.py  heroku.py  local.py
