[tool.poetry]
name = "projectname"
version = "0.1.0"
description = ""
authors = ["Thijs Baaijen <Thijss@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.1"
Django = "^3.1.4"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
sentry-sdk = "^0.19.5"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
good-names = "UserModel"
